--- a/docs/C++/latex/_using_the_raytracer.tex
+++ b/docs/C++/latex/_using_the_raytracer.tex
@@ -39,7 +39,7 @@ Now, let\textquotesingle{}s begin writing our script.\hypertarget{_using_the_ray
 In the Visual Studio window we opened in the last tutorial, look at the contents of H\+F\+Example\+Script.\+cs. The contents should match that of Figure 2.\+1. Once you\textquotesingle{}re sure of this, it\textquotesingle{}s time to start filling it in.
 
 \begin{quote}
-{\bfseries{N\+O\+TE}}\+: Remember, if you ever exit out of Visual Studio, you can always reopen it by double clicking a script in the assets window. \end{quote}
+{\bfseries{N\+O\+TE}}\+: Remember, if you ever exit out of Visual Studio, you can always reopen it by double clicking a script in the assets window of the unity editor. \end{quote}
 \hypertarget{_using_the_raytracer_autotoc_md8}{}\doxysubsection{Using Declarations}\label{_using_the_raytracer_autotoc_md8}
 Before getting into the logic of the script itself, we will add using declarations for the namespaces in Human\+Factors that we plan to reference.
 
